# orbit_zoo

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
src/orbitzoo/: __init__.py  env.py
src/orbitzoo/dynamics/: classes.py
src/orbitzoo/dynamics/orekit/: forces.py  main.py  orekit_body.py
src/orbitzoo/dynamics/tensorgator/: main.py
src/orbitzoo/interface/: main.py  pygame_utils.py
src/orbitzoo/rl_algorithms/: ddpg.py  dqn.py  ippo.py  mappo.py  ppo.py  td3.py
src/orbitzoo/scripts/: env_col_avoidance.py  env_constellation_fedavg.py  env_constellation_ippo.py  env_constellation_mappo.py  env_herrera.py  env_hohmann.py  env_kolosa.py  env_occupy_slots.py  env_rise_up_ddpg.py  env_rise_up_dqn.py  env_rise_up_ppo_cont.py  env_rise_up_ppo_disc.py  env_rise_up_td3.py  env_ruiz.py  mission_test_fedavg.py  mission_test_kolosa.py
tests/: test_interface_connections.py
